má correcciones de Sonar