@@ -4,7 +4,6 @@ import grupo5.common.repositories.BaseRepositoryEnMemoria;
 import grupo5.donaciones.dto.NecesidadDTO;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -18,8 +17,6 @@ public class NecesidadesRepositoryEnMemoria extends BaseRepositoryEnMemoria<Nece
 
   @Override
   public List<NecesidadDTO> buscarNecesidadesPorEntidad(UUID entidadId) {
-    return storage.values().stream()
-        .filter(dto -> entidadId.equals(dto.getEntidadId()))
-        .collect(Collectors.toList());
+    return storage.values().stream().filter(dto -> entidadId.equals(dto.getEntidadId())).toList();
   }
 }
